# minibot

./: CMakeLists.txt  ESP32_serial.ino  README.md  package.xml
config/: controller.yaml  controller_gz_sim.yaml  mapper_params_localization.yaml  mapper_params_online_async.yaml  minibot_config.rviz  minibot_display.rviz  nav2_params.yaml  twist_mux.yaml
demo_publisher_node/: velocity_publisher.cpp
description/: ackermann_drive_control.xacro  lidar.xacro  robot.urdf.xacro  robot_main.xacro
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/minibot/lib/minibot/: velocity_publisher
install/minibot/share/minibot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/minibot/share/minibot/cmake/: minibotConfig-version.cmake  minibotConfig.cmake
install/minibot/share/minibot/config/: controller.yaml  controller_gz_sim.yaml  empty.yaml  gz_params.yaml  joystick_params.yaml  mapper_params_localization.yaml  mapper_params_online_async.yaml  minibot_config.rviz  minibot_display.rviz  nav2_params.yaml  sim_config.rviz  twist_mux.yaml
install/minibot/share/minibot/demo_publisher_node/: velocity_publisher.cpp
install/minibot/share/minibot/description/: camera.xacro  depth_camera.xacro  gz_diff_drive_control.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_main.xacro  ros2_control.xacro
install/minibot/share/minibot/maps/: map_01.pgm  (+7 more)
launch/: robot.launch.py  robot_remote_station.launch.py  serial_comms.launch.py
log/: latest_build
src/: ESP32_serial.ino  steering_node.py
(+11 files in other folders)
